@@ -1,5 +1,9 @@
 Changes with Apache 2.0.37
 
+  *) Fix apxs to allow it to work when the build directory is somewhere
+     besides server-root/build.  PR 8453  
+     [Jeff Trawick and a host of others]
+
   *) Allow ap_discard_request_body to be called multiple times in the
      same request.  Essentially, ap_http_filter keeps track of whether
      it has sent an EOS bucket up the stack, if so, it will only ever
